tests/baselines/reference/parserStrictMode9.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode9.ts(2,18): error TS1100: Invalid use of 'eval' in strict mode.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode9.ts (1 errors) ====
    "use strict";
    var v = function eval() {
                     ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    };